   * a -c option was added, which concatenate the file's
     output to standard output. This is done to make 
     remote backups more easily. This also changes rdup's output!
   * a -s <size> option was added which will only print
     out files that are smaller then a certain size.
   * A beginning was made with a perl impl. of hdup2, which 
     runs on top of rdup.
   Code:
   * Various typo's are fixed
   * -Wextra was dropped to allow compilation with older gcc's.
   * functions that weren't exported are now declared static.
   * Moved TODO to todo


25 Jan 2006: 0.2.0 Miek <miek@miek.nl>
   * Jumped to version 0.2.0.
   Build:
   * Reworked autoconf, autoREconf && ./configure && make
     must now be used to compile rdup
   Code:
   * Ported to FreeBSD, getdelim.c was added for that.
     Also test compiled it on Mac OS X with Fink.
   * Signal handling for SIGPIPE and SIGINT was implemented,
     we now print an error when receiving such a signal.


18 Jan 2006: 0.1.3 Miek <miek@miek.nl>
   * hist.sh updated, it goes back for 3 months now
   * yesterday.sh now works correctly 
   * mirror.sh/rmirror.sh now create suffixes for backup
     files based on their creation time. The suffix 
     used is +MONTHDAY.HH.MM.


06 Jan 2006: 0.1.2 Miek <miek@miek.nl>
   * All scripts were completely reworked, local
     and remote backing up is now working.
   * End-user script were improved, excl.sh is now
     a working example. Everything is much more 
     enduser friendly
   * Documentation and man pages were improved and
     updated to reflect the modifications in the scripts.
   Code:
   * refactored printing in gfunc.c, this was a minor change.


02 Jan 2006: 0.1.1 Miek <miek@miek.nl>
   * Use strcmp instead of g_ascii_strcasecmp() as
     case is significant in unix fs
   * Don't gzip the files by default with backup.sh
   * added mirror/dump.sh which is an example wrapper
     script for backupping.
   * Manual pages were updated.

